tests/fsharp/typeProviders/negTests/neg2.fsx
#r "provider.dll"

let s : string = FSharp.GoodProviderForNegativeTypeTests1.TheHype.Foo